@@ -2,7 +2,8 @@ Cacti CHANGELOG
 
 SVN
 -feature: Properly support ifHighSpeed
--bug: Timespan Settings Broken with 0.8.7h
+-bug#0002066: Graph without host id Notice: Undefined variable: host_id
+-bug#0002067: custom time range filter not working 
 -bug: Refresh of Cacti Log Broken wiht 0.8.7h
 
 0.8.7h
